# tiny-multimodal-ai-research-radar

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py
docs/: after-august.md  architecture.md  content-plan.md  evaluation.md  job-positioning.md  papers.md  roadmap.md
docs/decisions/: ADR-0001-project-scope.md  ADR-0002-morning-deep-work.md
docs/experiments/: mini-gpt-implementation-contract.md  mini-gpt-plan.md  mini-gpt-reading-notes.md  mini-gpt-task-01-tokenizer-dataloader.md  mini-gpt-task-02-embeddings-bigram-baseline.md  mini-gpt-task-03-bigram-training-smoke-test.md  mini-gpt-worklog.md
docs/posts/: week-01-starting-the-sprint.md
docs/weekly-reviews/: week-01.md
scripts/: evaluate_rag.py  ingest_papers.py  run_rag.py
src/research_radar/: __init__.py  agents.py  chunking.py  domain.py  evaluation.py  ingestion.py  multimodal.py  rag.py
src/research_radar/mini_gpt/: __init__.py  data.py  model.py  tokenizer.py  training.py
tests/: test_mini_gpt_data.py  test_mini_gpt_model.py  test_mini_gpt_tokenizer.py  test_mini_gpt_training.py  test_smoke.py
tests/fixtures/: mini_gpt_corpus.txt
